# MeshConverter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: MeshConverterDependencies.cmake  MeshConverterDownloadExternal.cmake  geogram.cmake
src/: MeshConverter.cpp  MeshOrient.cpp  MeshOrient.h  MeshRWer.cpp  MeshRWer.h  PLSRWer.h  SurfaceHoleFilling.cpp  SurfaceHoleFilling.h  SurfaceRemesh.cpp  SurfaceRemesh.h  VTKRWer.h  facet_classification.cpp  facet_classification.h  mesh.h  meshAlgorithm.cpp  meshAlgorithm.h  meshIO.cpp  meshIO.h  remesh.cpp  remesh.h  stl_reader.h  triMesh.h
src/Halfedge/: AABB_Tree.cpp  AABB_Tree.h  Massage.h  MemoryPool.h  PolyMesh.cpp  PolyMesh.h  PolyMeshIterators.cpp  PolyMeshIterators.h  PolyMesh_Base.cpp  PolyMesh_Base.h  TinyVector.h
src/MeshOrient/: CMakeLists.txt  MeshOrient.cpp  MeshOrient.h  MeshOrientExe.cpp  triMesh.cpp  triMesh.h
